--- a/www/templates/folders.html
+++ b/www/templates/folders.html
@@ -42,7 +42,7 @@
     <ion-footer-bar>
       <div style="width:100%;">
         <div class="quickNav" style="bottom: 0;">
-          <a href="#/settings"><span class="glyphicon glyphicon-circle-arrow-left"></span></a>
+          <a ng-click="goToSettings()"><span class="glyphicon glyphicon-circle-arrow-left"></span></a>
           <!-- <a href="#/entry"><span class="glyphicon glyphicon-home"></span></a> -->
         </div>
       </div>
