--- a/www/templates/kqhz.html
+++ b/www/templates/kqhz.html
@@ -99,7 +99,7 @@
 		<div class="quickNav">
 			<a href="#/dash"><span class="glyphicon glyphicon-circle-arrow-left"></span></a>
 			<a href="#/entry"><span class="glyphicon glyphicon-home"></span></a>
-			<a href="#/settings"><span class="glyphicon glyphicon-cog"></span></a>
+			<a href="#/settings/"><span class="glyphicon glyphicon-cog"></span></a>
 		</div>
 	</ion-footer-bar>
 </ion-view>
