--- a/www/templates/line-kpi-group.html
+++ b/www/templates/line-kpi-group.html
@@ -39,7 +39,7 @@
 		<div class="quickNav" style="bottom: 0;">
 			<a href="#/dash"><span class="glyphicon glyphicon-circle-arrow-left"></span></a>
 			<a href="#/entry"><span class="glyphicon glyphicon-home"></span></a>
-			<a href="#/settings"><span class="glyphicon glyphicon-cog"></span></a>
+			<a href="#/settings/"><span class="glyphicon glyphicon-cog"></span></a>
 		</div>
     </ion-content>
     <ion-footer-bar>
