--- a/www/templates/settings.html
+++ b/www/templates/settings.html
@@ -62,9 +62,9 @@
     <ion-footer-bar style="height: 4em;">
     
         <div class="quickNav">
-            <a ng-click="historyBack()"><span class="glyphicon glyphicon-circle-arrow-left"></span></a>
+            <a ng-click="back()"><span class="glyphicon glyphicon-circle-arrow-left"></span></a>
             <a href="#/entry"><span class="glyphicon glyphicon-home"></span></a>
-            <!-- <a href="#/settings"><span class="glyphicon glyphicon-cog"></span></a> -->
+            <!-- <a href="#/settings/"><span class="glyphicon glyphicon-cog"></span></a> -->
         </div>
   </ion-footer-bar>
 </ion-view>
