--- a/www/templates/view-board.html
+++ b/www/templates/view-board.html
@@ -99,7 +99,7 @@
 	<div class="quickNav" style="position: absolute; right: 1em; bottom: 0.5em; font-size: 1.5em; line-height: 1em;">
 		<a href="#/entry"><span class="glyphicon glyphicon-circle-arrow-left"></span></a>
 		<a href="#/entry"><span class="glyphicon glyphicon-home"></span></a>
-		<a href="#/settings"><span class="glyphicon glyphicon-cog"></span></a>
+		<a href="#/settings/"><span class="glyphicon glyphicon-cog"></span></a>
 	</div>
   </ion-content>
 </ion-view>
