--- a/www/templates/garden.html
+++ b/www/templates/garden.html
@@ -61,7 +61,7 @@
         <div class="quickNav" style="bottom: 0;">
           <a ng-href="{{isLine? '#/view-board' :'#/dash'}}"><span class="glyphicon glyphicon-circle-arrow-left"></span></a>
           <a href="#/entry"><span class="glyphicon glyphicon-home"></span></a>
-          <a href="#/settings"><span class="glyphicon glyphicon-cog"></span></a>
+          <a href="#/settings/"><span class="glyphicon glyphicon-cog"></span></a>
         </div>
       </div>
   </ion-footer-bar>
