--- a/www/templates/green-cross.html
+++ b/www/templates/green-cross.html
@@ -129,7 +129,7 @@
 	<div class="quickNav">
 		<a ng-click="historyBack()"><span class="glyphicon glyphicon-circle-arrow-left"></span></a>
 		<a href="#/entry"><span class="glyphicon glyphicon-home"></span></a>
-		<a href="#/settings"><span class="glyphicon glyphicon-cog"></span></a>
+		<a href="#/settings/"><span class="glyphicon glyphicon-cog"></span></a>
 	</div>
 </div>
 	</ion-footer-bar>
