--- a/www/templates/kpi-detail.html
+++ b/www/templates/kpi-detail.html
@@ -86,7 +86,7 @@
 	<div class="quickNav">
 		<a ng-href="{{isLine? '#/line/kpi' :'#/kpi'}}"><span class="glyphicon glyphicon-circle-arrow-left"></span></a>
 		<a href="#/entry"><span class="glyphicon glyphicon-home"></span></a>
-		<a href="#/settings"><span class="glyphicon glyphicon-cog"></span></a>
+		<a href="#/settings/"><span class="glyphicon glyphicon-cog"></span></a>
 	</div>
   </ion-content>
   <ion-footer-bar >
