--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1003,3 +1003,4 @@ a.entry-home:hover{text-decoration: none;}
 }
 .folder span{margin-left: 1em; }
 .carousel-indicators{display: none;}
+.rect.half{height: 0.5em;}
