--- a/www/templates/kqhz.html
+++ b/www/templates/kqhz.html
@@ -46,7 +46,6 @@
 						<span ng-if="clzMap[r[d]] != 'hurt' && clzMap[r[d]] != 'absent'" class="{{clzMap[r[d]]}}"></span>
 						<span ng-if="clzMap[r[d]] == 'hurt'">#</span>
 						<span ng-if="clzMap[r[d]] == 'absent'">※</span>
-						<span ng-if="clzMap[r[d]] == 'year-holiday'">▭</span>
 					</td>
 					</tr>
 				</tbody>
@@ -59,7 +58,7 @@
 			<span class="fl">说明</span>
 			<ol class="fl mg-lf-1">
 				<li>1. 部门考勤员应认真做好考勤统计工作，如实反映情况，不得弄虚作假</li>
-				<li>2. 各类假期表示符号：缺勤<span>※</span>、出勤<span class="glyphicon glyphicon-ok"></span>、病假<span class="circle anjie-border"></span>、事假<span class="glyphicon glyphicon-remove"></span>、产假<span class="glyphicon glyphicon-star-empty"></span>、探亲<span class="rect"></span>、公假<span class="anjie-bg circle anjie-border"></span>、公出<span class="glyphicon glyphicon-record"></span>、旷工<span class="glyphicon glyphicon-triangle-top"></span>、生产性放班<span class="glyphicon glyphicon-asterisk"></span>、年休假<span>▭<span></span></span>、工伤<span>#</span>、培训<span class="glyphicon glyphicon-triangle-bottom"></span>、借调<span class="glyphicon glyphicon-star"></span></li>
+				<li>2. 各类假期表示符号：缺勤<span>※</span>、出勤<span class="glyphicon glyphicon-ok"></span>、病假<span class="circle anjie-border"></span>、事假<span class="glyphicon glyphicon-remove"></span>、产假<span class="glyphicon glyphicon-star-empty"></span>、探亲<span class="rect"></span>、公假<span class="anjie-bg circle anjie-border"></span>、公出<span class="glyphicon glyphicon-record"></span>、旷工<span class="glyphicon glyphicon-triangle-top"></span>、生产性放班<span class="glyphicon glyphicon-asterisk"></span>、年休假<span class="rect half"><span></span></span>、工伤<span>#</span>、培训<span class="glyphicon glyphicon-triangle-bottom"></span>、借调<span class="glyphicon glyphicon-star"></span></li>
 				<li><span>3. </span>
 				<div class="twrapper" style="display: inline-block;margin-right:1em;    vertical-align: bottom;"><div class="type two clear">
 					<div class="name" >
