Fix table scroll

--- a/www/templates/cost-view-wall.html
+++ b/www/templates/cost-view-wall.html
@@ -19,8 +19,8 @@
 		</div>
 	  	<div></div>
 	</ion-header-bar>
-    <ion-content>
-    	<div style="padding-bottom: 6em; position: relative;">
+    <ion-content style="bottom: 7em;">
+    	<div style="position: relative;">
 			<div class="content-wrapper" style=";padding:0;">
 				<div style="height: 100%;">
 					<div class="kqhz gwrx content-wrapper" style="padding: 1em 0;">
