--- a/www/templates/lgjh.html
+++ b/www/templates/lgjh.html
@@ -19,7 +19,7 @@
 		</div>
 	  	<div></div>
 	</ion-header-bar>
-    <ion-content class="bgFF" style="background: #FFF" on-double-tap="goHome('kqhz')">
+    <ion-content class="bgFF" style="background: #FFF;bottom: 4em;" on-double-tap="goHome('kqhz')">
 	    <div class="kqhz gwrx content-wrapper">
 		<table>
 			<thead>
