--- a/www/templates/flow-view-wall.html
+++ b/www/templates/flow-view-wall.html
@@ -19,7 +19,7 @@
 		</div>
 	  	<div></div>
 	</ion-header-bar>
-    <ion-content class="bgFF" style="background: #FFF">
+    <ion-content class="bgFF" style="background: #FFF;bottom: 4em;">
 	    <div class="kqhz gwrx content-wrapper">
 	    <span class="anji-theme" style="font-size:0.9em"  </span>
 		<table>
