--- a/www/templates/settings.html
+++ b/www/templates/settings.html
@@ -40,15 +40,15 @@
                     <button ng-show="isIntervalModify" ng-click="modifyInterval(settings.editInterval)" class="btn btn-danger" type="submit">保存</button>
                     <button ng-show="isIntervalModify" class="btn btn-default" ng-click="cancelIntervalModify()" type="submit">取消</button>
                 </h3>
-                <span ng-bind="settings.editInterval+'秒'"></span>
-                <div ng-show="isIntervalModify" class="item range">
+                <span ng-bind="(settings.editInterval?settings.editInterval:1)+'秒'"></span>
+                <div ng-show="isIntervalModify" class="item range" style="width: 10em; height: 3em; padding: 0;">
                   <!-- <i class="icon ion-clock" style="color: gray;"></i>
                   <input type="range" name="timeInterval" value="{{getInterval()}}" ng-model="settings.editInterval" min="2" max="60">
                   <i class="icon ion-clock"></i> -->
 
-                  <label class="item item-input" style="border: 0;width: 100%;">
+                  <label class="item item-input" style="padding: 0;border: 0;width: 100%;">
                       <!-- <span class="input-label">Number</span> -->
-                      <input name="timeInterval" value="{{getInterval()}}" 
+                      <input name="timeInterval" value="{{getInterval()}}"  style="    margin: 0; padding: 0 1em; text-align: center; background: #FFF;"
                         ng-model="settings.editInterval" type="number">
                   </label>
 
