--- a/www/templates/kpi-chart.html
+++ b/www/templates/kpi-chart.html
@@ -26,7 +26,7 @@
                             <span ng-bind="KPITitle"></span><br>
                             ( <span class="subPageTitle" ng-bind="selectedCriteria.kuqu.whse_code"></span>
                             <span class="subPageTitle" ng-if="!isLine" ng-bind="'-'+selectedCriteria.banzu.description"></span>
-                            <span class="subPageTitle" ng-if="!isLine" ng-hide="aspect=='member'" ng-bind="'-'+selectedCriteria.banci.shift_code"></span>)
+                            <span class="subPageTitle" ng-if="!isLine" ng-hide="aspect=='member' || aspect=='quality'" ng-bind="'-'+selectedCriteria.banci.shift_code"></span>)
                         </span>
                     </div>
                 </div>
