--- a/www/templates/kpi-detail.html
+++ b/www/templates/kpi-detail.html
@@ -64,7 +64,7 @@
 	    <div ng-repeat="m in menus" class="bz-menu col-3">
         <div ng-if="m.hatColor && m.hatColor!=''" class="hat">
         	<!-- <span class="glyphicon glyphicon-bed" style="color: {{m.hatColor}}"></span> -->
-        	<img ng-src="img/{{m.hatColor}}.svg" />
+        	<img ng-src="img/{{m.hatColor}}.png" />
         </div>
         <div class="rate">
         	<span ng-bind="m.rate"></span>
