--- a/www/templates/settings.html
+++ b/www/templates/settings.html
@@ -71,6 +71,7 @@
                 <button ng-hide="hasNewVersion" ng-bind="checkVersionText" class="btn btn-default" ng-click="checkVersion()">检查更新</button>
             </p>
             <span ng-show="hasNewVersion">有新的版本，<a href="" style="color: #18E586;text-decoration: underline;" ng-click="downloadVersion()">点击下载</a></span>
+            <span ng-bind="dbgMsg"></span>
         </div>
 
     </ion-content>
