--- a/www/templates/settings.html
+++ b/www/templates/settings.html
@@ -67,7 +67,7 @@
 
         <div style="color: #FFF;">
             <p>
-                <h3>版本更新<span></span></h3>
+                <h3>版本更新<span ng-bind="'当前版本'+appVersion"></span></h3>
                 <button ng-hide="hasNewVersion" ng-bind="checkVersionText" class="btn btn-default" ng-click="checkVersion()">检查更新</button>
             </p>
             <span ng-show="hasNewVersion">有新的版本，<a href="" style="color: #18E586;text-decoration: underline;" ng-click="downloadVersion()">点击下载</a></span>
