--- a/www/templates/settings.html
+++ b/www/templates/settings.html
@@ -70,8 +70,7 @@
                 <h3>版本更新<span style="font-size:0.55em" ng-bind="'   当前版本'+appVersion"></span></h3>
                 <button ng-hide="hasNewVersion" ng-bind="checkVersionText" class="btn btn-default" ng-click="checkVersion()">检查更新</button>
             </p>
-            <span ng-show="hasNewVersion">有新的版本，<a href="" style="color: #18E586;text-decoration: underline;" ng-click="downloadVersion()">点击下载</a></span>
-            <span ng-bind="dbgMsg"></span>
+            <span ng-show="hasNewVersion">有新的版本，<a ng-href="{{apkURL}}" target="_blank" style="color: #18E586;text-decoration: underline;">点击下载</a></span>
         </div>
 
     </ion-content>
