--- a/www/templates/settings.html
+++ b/www/templates/settings.html
@@ -71,8 +71,9 @@
                 <button ng-hide="hasNewVersion" ng-bind="checkVersionText" class="btn btn-default" ng-click="checkVersion()">检查更新</button>
             </p>
             <span ng-show="hasNewVersion">有新的版本，
-            <a href="#" ng-click="launchNavigator()"
+            <a href="#" ng-click="downloadVersion()"
                 style="color: #18E586;text-decoration: underline;">点击下载{{apkURL}}</a>
+            <span ng-show="downloading" ng-bind="'已下载'+downloadProgress"></span>
         </div>
 
     </ion-content>
