Fix display progress

--- a/www/templates/settings.html
+++ b/www/templates/settings.html
@@ -72,7 +72,7 @@
             </p>
             <span ng-show="hasNewVersion && !downloading">有新的版本，
             <a href="#" ng-click="downloadVersion()"
-                style="color: #18E586;text-decoration: underline;">点击下载{{apkURL}}</a>
+                style="color: #18E586;text-decoration: underline;">点击下载{{apkURL}}</a></span>
             <span ng-show="downloading" ng-bind="'已下载'+downloadProgress"></span>
         </div>
 
