--- a/www/templates/gwrx.html
+++ b/www/templates/gwrx.html
@@ -8,7 +8,7 @@
 				<div>
 					<div class="bold-title single-line">
                         <span class="pageTitle">
-                            <span>外库运作岗位柔性表</span><br>
+                            <span>岗位柔性表</span><br>
                             ( <span class="subPageTitle" ng-bind="selectedCriteria.kuqu.whse_code">仓库代码</span>
 							<span class="subPageTitle" ng-bind="'-'+selectedCriteria.banzu.description+'-'">班组</span>
 							<span class="subPageTitle" ng-bind="selectedCriteria.banci.shift_code">班次</span> )
