--- a/www/css/style.css
+++ b/www/css/style.css
@@ -783,6 +783,8 @@ ion-content.bgFF{
 	height: 100%;
     background: #fff;
     border-radius: 0.5em;
+    font-size: 1em;
+    line-height: 1em;
 }
 ion-header-bar {
     margin-top: 0.5em;
@@ -966,8 +968,7 @@ span.arrow-border-up span{
     display: none;
 }
 .pageTitle{
-    position: relative;
-    top: 0.5em;
+    line-height: 1.5em;
 }
 .subPageTitle{
     font-size: 0.75em;
@@ -1014,4 +1015,10 @@ a.entry-home:hover{text-decoration: none;}
     width: 100%;
     /* height: 1em; */
     line-height: 1em;
-    left: 0;}
+    left: 0;
+}
+
+.oneLineTitle{
+    font-size: 1.2em;
+    line-height: 2.5em;
+}
