--- a/www/templates/folders.html
+++ b/www/templates/folders.html
@@ -7,8 +7,8 @@
           <div class=" logo-left"><img class="fl" src="img/dazhong.svg"/></div>
           <div class="logo-right-wp"><img src="img/LOG9.jpg"/></div>
           <div>
-            <div class="bold-title single-line" style="line-height: 3em;">
-              <span style="font-size: 1.2em">选择图片目录</span>
+            <div class="bold-title single-line">
+              <span class="oneLineTitle">选择图片目录</span>
             </div>
           </div>
         </div>
