--- a/www/templates/settings.html
+++ b/www/templates/settings.html
@@ -12,8 +12,8 @@
                 <div class=" logo-left"><img class="fl" src="img/dazhong.svg"/></div>
                 <div class="logo-right-wp"><img src="img/LOG9.jpg"/></div>
                 <div>
-                    <div class="bold-title single-line" style="line-height: 3em;">
-                        <span style="font-size: 1.2em">设置</span>
+                    <div class="bold-title single-line">
+                        <span class="oneLineTitle">设置</span>
                     </div>
                 </div>
             </div>
