biaoti && break line

--- a/www/templates/gwrx.html
+++ b/www/templates/gwrx.html
@@ -60,8 +60,8 @@
     <ion-footer-bar>
 	 	<div style="width:100%;">
 	 		<div class="clear tl anji-font-color mg-tp-1" style="height: 4em;position: absolute; top: -4em; padding-top: 0.5em; right: 0.5em; margin-top: 0; background: #fff; left: 0.5em;">
-				<span class="fl">说明</span>
-				<ol class="fl mg-lf-1">
+				<span class="fl">说明：</span>
+				<ol class="fl">
 					<li>1. 各类表示符号：不需要掌握<span>#</span>、需指导完成<span class="glyphicon glyphicon-star"></span>、能独立完成<span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span>、能培训他人<span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span>、有相关证件<span class="">YES</span>、无相关证件<span class="">NO</span></li>
 					<li><span>2. </span>
 
