--- a/www/templates/kqhz.html
+++ b/www/templates/kqhz.html
@@ -56,8 +56,8 @@
     </ion-content>
     <ion-footer-bar>
 		<div class="clear tl anji-font-color mg-tp-1" style="height: 8em;position: absolute; top: -8em; padding-top: 0.5em; right: 0.5em; margin-top: 0; background: #fff; left: 0.5em;">
-			<span class="fl">说明</span>
-			<ol class="fl mg-lf-1">
+			<span class="fl">说明：</span>
+			<ol class="fl">
 				<li>1. 部门考勤员应认真做好考勤统计工作，如实反映情况，不得弄虚作假</li>
 				<li>2. 各类假期表示符号：缺勤<span>※</span>、出勤<span class="glyphicon glyphicon-ok"></span>、病假<span class="circle anjie-border"></span>、事假<span class="glyphicon glyphicon-remove"></span>、产假<span class="glyphicon glyphicon-star-empty"></span>、探亲<span class="rect"></span>、公假<span class="anjie-bg circle anjie-border"></span>、公出<span class="glyphicon glyphicon-record"></span>、旷工<span class="glyphicon glyphicon-triangle-top"></span>、生产性放班<span class="glyphicon glyphicon-asterisk"></span>、年休假<span class="rect half"><span></span></span>、工伤<span>#</span>、培训<span class="glyphicon glyphicon-triangle-bottom"></span>、借调<span class="glyphicon glyphicon-star"></span></li>
 				<li><span>3. </span>
