--- a/www/css/style.css
+++ b/www/css/style.css
@@ -969,6 +969,7 @@ span.arrow-border-up span{
 }
 .pageTitle{
     line-height: 1.5em;
+    font-size: 1.2em;
 }
 .subPageTitle{
     font-size: 0.75em;
