--- a/www/templates/kpi-group.html
+++ b/www/templates/kpi-group.html
@@ -24,7 +24,7 @@
 	    <div class="kpiGroup tc" style="position: absolute; width: 100%; height: 100%;">
 	    	<div class="center">
 
-	    		<img src="img/3.svg">
+	    		<!-- <img src="img/3.svg"> -->
 	        	<a ng-click="goDetail(kpi.type, kpi.PageType)" ng-repeat="kpi in kpis" class="kpi {{kpi.type}}">
 	        		<div style="position: relative;">
 		        		<span ng-bind="kpi.name"></span>
