--- a/www/templates/ad/xiajia.html
+++ b/www/templates/ad/xiajia.html
@@ -31,7 +31,7 @@
                     <td ng-bind="r.lastTime"></td>
                     <td class="operation">
                         <span>下&nbsp;架</span>
-                        <span><a href="#">库&nbsp;存</a></span>
+                        <span><a href="#/ad/kucun">库&nbsp;存</a></span>
                     </td>
                 </tr>
             </tbody>
