--- a/www/templates/ad/login-dashboard.html
+++ b/www/templates/ad/login-dashboard.html
@@ -5,23 +5,29 @@
     </ion-header-bar>
 
     <ion-content scroll="false">
-        <div class="entryWp login-dashboard">
+        <div class="entryWp ad-sub-permission login-dashboard">
+            <div>
             <a href="#/dash" class="entry-home">
                 <div class="entry" style="left: 15%;">
                     <div class="img tc">
                         <img src="img/ad/login-sfm.png"/>
                     </div>
-                    <span class="number">SFM</span>
+                    <div class="group">
+                        <span class="number">SFM</span>
+                    </div>
                 </div>
             </a>
-            <a href="#/view-board" class="entry-home">
+            <a href="#/ad/sub-permssion" class="entry-home">
                 <div class="entry" style="right: 15%;">
                     <div class="img tc">
                         <img src="img/ad/login-ad.png"/>
                     </div>
-                    <span class="number">AD Boadrd</span>
+                    <div class="group">
+                        <span class="number">AD Boadrd</span>
+                    </div>
                 </div>
             </a>
+            </div>
         </div>
     </ion-content>
 </ion-view>
