--- a/www/templates/ad/login.html
+++ b/www/templates/ad/login.html
@@ -7,7 +7,7 @@
             <div>
                 <div class="login">
                     <div class="form-wpr">
-                        <form>
+                        <form ng-submit="login()" >
                             <table>
                                 <tr><td style="width: 5em;" class="tl">
                                     <label>用户名</label>
@@ -29,7 +29,7 @@
                                 </td></tr>
                                 <tr><td colspan="2">
                                     <div class="msg error" ng-if="errorMsg" ng-bind="errorMsg"></div>
-                                    <button ng-click="login()" type="submit" ng-disabled="!params.identity || !params.password" id="submit" class="btn btn-primary">登录</button>
+                                    <button type="submit" ng-disabled="!params.identity || !params.password" id="submit" class="btn btn-primary">登录</button>
                                 </td></tr>
                             </table>
                         </form>
